correction_demander_par_la_prof
index ajout lien btn + ajustement hero, actualités + modification mixin bouton pour avoir des liens et des bordures invisible + correction dans le main.js + correction scss page 404

--- a/wp-content/themes/marieMichelle_Ouellet-flhlmq/partials-scss/_actuAccueil.scss
+++ b/wp-content/themes/marieMichelle_Ouellet-flhlmq/partials-scss/_actuAccueil.scss
@@ -19,6 +19,7 @@ $imgArr: (nouv1: './medias/img/accueil_carte_01.jpg', nouv2: './medias/img/accue
     height: 5vh;
     position: relative;
     width: 100%;
+    top: -8vh;
     //max-width: 1400px;
     margin: auto;
     display: flex;
@@ -27,6 +28,7 @@ $imgArr: (nouv1: './medias/img/accueil_carte_01.jpg', nouv2: './medias/img/accue
     button {
         background-color: rgba(0, 0, 0, 0);
         border: none;
+        z-index: 10;
     }
 
     svg {
@@ -88,7 +90,7 @@ $imgArr: (nouv1: './medias/img/accueil_carte_01.jpg', nouv2: './medias/img/accue
     max-width: 100%;
     height: 100%;
     display: grid;
-    grid-template-rows: 20px 80px auto 10px;
+    grid-template-rows: 20px 80px auto auto;
 
     &__date {
         margin-bottom: 20px;
@@ -104,15 +106,18 @@ $imgArr: (nouv1: './medias/img/accueil_carte_01.jpg', nouv2: './medias/img/accue
         padding: 10px 0;
 
         p {
+            display: inline;
             line-height: 20px;
+            a {
+                color: variables.$noirPoudre;
+                text-decoration: none;
+            }
         }
 
         &:hover {
             p {
                 //background-color: variables.$lavandreCendre;
-                background-image: url(./medias/img/hero_background_svg.svg);
-                background-size: cover;
-                background-repeat: no-repeat;
+                background-color: variables.$lavandreCendre;
             }
         }
     }
@@ -138,13 +143,16 @@ $imgArr: (nouv1: './medias/img/accueil_carte_01.jpg', nouv2: './medias/img/accue
 }
 
 @media screen and (max-width: 1400px) {
+    .swiper-nav {
+        top: -5vh;
+    }
     .swiper {
         height: 70%;
     }
 
     .actualite {
         width: 500px;
-        grid-template-rows: 20px 80px auto 20px;
+        grid-template-rows: 20px 100px auto 20px;
 
         &__date {
             font-size: 20px;
@@ -157,13 +165,17 @@ $imgArr: (nouv1: './medias/img/accueil_carte_01.jpg', nouv2: './medias/img/accue
 }
 
 @media screen and (max-width: 768px) {
+    .swiper-nav {
+        top: -2vh;
+    }
+
     .swiper {
         height: 70%;
+        overflow-x: hidden;
     }
 
     .actualite {
-
-        grid-template-rows: 20px 80px auto 20px;
+        grid-template-rows: minmax(20px, 40px) 100px minmax(200px, auto) auto;
 
         &__date {
             font-size: 20px;
