--- a/wp-content/themes/marieMichelle_Ouellet-flhlmq/partials-scss/_heroAccueil.scss
+++ b/wp-content/themes/marieMichelle_Ouellet-flhlmq/partials-scss/_heroAccueil.scss
@@ -13,6 +13,7 @@
     height: auto;
 
     &__container {
+        padding: 0 10px;
         margin: auto;
         height: 100%;
         max-width: 1400px;
@@ -28,8 +29,10 @@
             grid-row: 1;
             display: grid;
             grid-template-rows: auto auto auto;
+            grid-template-columns: auto;
 
             &__nomEntreprise {
+                margin: 5vh 0;
                 font-size: 20px;
                 grid-row: 1;
                 grid-column: 1;
@@ -37,13 +40,13 @@
             }
 
             &__msgEntreprise {
-                line-height: 75px;
                 grid-row: 2;
                 grid-column: 1;
                 align-self: center;
-                font-size: 48px;
+                font-size: 64px;
 
                 em {
+                    white-space: nowrap;
                     font-style: normal;
                     font-size: 100px;
                     background-image: url(./medias/img/hero_background_svg.svg);
@@ -61,7 +64,7 @@
 
             &__btn {
                 width: 250px;
-                margin: 2vh 0;
+                margin: 2vh 0 0 0;
                 align-self: center;
                 font-size: 24px;
                 padding: 1vh 3vw;
@@ -121,6 +124,20 @@
     }
 }
 
+@media screen and (max-width: 450px) {
+    .hero {
+        &__container {
+            .info {
+                &__msgEntreprise {
+                    em {
+                        white-space: wrap;
+                    }
+                }
+            }
+        }
+    }
+}
+
 @media screen and (min-width: 768px) {
     .hero.marginNoMsg {
         margin-top: 6vh;
@@ -132,13 +149,13 @@
                 grid-template-rows: auto auto auto;
 
                 &__nomEntreprise {
+                    margin: 5vh 0;
                     font-size: 24px;
                     grid-column: span 2;
                 }
 
                 &__msgEntreprise {
                     font-size: 70px;
-                    line-height: 75px;
                     grid-column: span 2;
                 }
 
@@ -182,15 +199,16 @@
                 grid-template-rows: none;
 
                 &__nomEntreprise {
+                    margin: 5vh 0;
+                    width: 90%;
                     font-size: 24px;
-                    align-self: center;
+                    align-self: end;
                     grid-row: 2 / 3;
                     grid-column: 1 / 3;
                 }
 
                 &__msgEntreprise {
                     font-size: 70px;
-                    line-height: 120px;
                     align-self: center;
                     grid-row: 3 / 4;
                     grid-column: 1 / 3;
