--- a/wp-content/themes/marieMichelle_Ouellet-flhlmq/partials-scss/_pageErreurNotFound.scss
+++ b/wp-content/themes/marieMichelle_Ouellet-flhlmq/partials-scss/_pageErreurNotFound.scss
@@ -131,7 +131,7 @@
         background-color: $color;
         width: $size;
         height: $size;
-        margin: (-$size/2) 0 0 (-$size/2);
+        margin: calc(-1 * $size/2) 0 0 calc(-1 * $size/2);
       }
     }
   }
