--- a/wp-content/themes/marieMichelle_Ouellet-flhlmq/partials-scss/_service.scss
+++ b/wp-content/themes/marieMichelle_Ouellet-flhlmq/partials-scss/_service.scss
@@ -15,6 +15,8 @@
         color: variables.$bleuNuit;
     }
     .text {
+        line-height: 24px;
+        font-size: 18px;
         color: variables.$bleuNuit;
     }
     &__sectionUn {
