--- a/wp-content/themes/marieMichelle_Ouellet-flhlmq/partials-scss/mixins/_mixins.scss
+++ b/wp-content/themes/marieMichelle_Ouellet-flhlmq/partials-scss/mixins/_mixins.scss
@@ -13,10 +13,18 @@
     color: variables.$bleuNuit;
     border: 1px solid variables.$bleuNuit;
     font-weight: bold;
+    a {
+        color: variables.$bleuNuit;
+        text-decoration: none;
+    }
     &:hover {
         background-color: variables.$bleuNuit;
         color: variables.$blancSel;
         border: 1px solid variables.$blancSel;
+        a {
+            color: variables.$blancSel;
+            text-decoration: none;
+        }
     }
 }
 
@@ -32,11 +40,20 @@
     border-radius: 25px;
     background-color: variables.$noirPoudre;
     color: variables.$blancSel;
+    border: 1px solid rgba(0,0,0,0);
     font-weight: bold;
+    a {
+        color: variables.$blancSel;
+        text-decoration: none;
+    }
     &:hover {
         background-color: variables.$blancSel;
         color: variables.$noirPoudre;
-        border: 1px solid variables.$noirPoudre ;
+        border: 1px solid variables.$noirPoudre;
+        a {
+            color: variables.$bleuNuit;
+            text-decoration: none;
+        }
     }
 
 
@@ -55,10 +72,19 @@
     background-color: variables.$bleuNuit;
     color: variables.$blancSel;
     font-weight: bold;
+    border: 1px solid rgba(0,0,0,0);
+    a {
+        color: variables.$blancSel;
+        text-decoration: none;
+    }
     &:hover {
         background-color: variables.$blancSel;
         color: variables.$bleuNuit;
         border: 1px solid variables.$bleuNuit ;
+        a {
+            color: variables.$bleuNuit;
+            text-decoration: none;
+        }
     }
 }
 
@@ -75,10 +101,19 @@
     background-color: variables.$lavandrepetant;
     color: variables.$noirPoudre;
     font-weight: bold;
+    border: 1px solid rgba(0,0,0,0);
+    a {
+        color: variables.$noirPoudre;
+        text-decoration: none;
+    }
     &:hover {
         background-color: variables.$noirPoudre;
         color: variables.$lavandrepetant;
         border: 1px solid variables.$lavandrepetant ;
+        a {
+            color: variables.$lavandrepetant;
+            text-decoration: none;
+        }
     }
 }
 
@@ -95,10 +130,19 @@
     background-color: variables.$lavandrepetant;
     color: variables.$noirPoudre;
     font-weight: bold;
+    border: 1px solid rgba(0,0,0,0);
+    a {
+        color: variables.$noirPoudre;
+        text-decoration: none;
+    }
     &:hover {
         background-color: variables.$noirPoudre;
         color: variables.$lavandrepetant;
         border: 1px solid variables.$lavandrepetant ;
+        a {
+            color: variables.$lavandrepetant;
+            text-decoration: none;
+        }
     }
 }
 
@@ -115,10 +159,19 @@
     background-color: variables.$blancSel;
     color: variables.$bleuSarcelle;
     font-weight: bold;
+    border: 1px solid rgba(0,0,0,0);
+    a {
+        color: variables.$bleuSarcelle;
+        text-decoration: none;
+    }
     &:hover {
         background-color: variables.$bleuSarcelle;
         color: variables.$blancSel;
         border: 1px solid variables.$blancSel;
+        a {
+            color: variables.$blancSel;
+            text-decoration: none;
+        }
     }
 }
 
@@ -135,10 +188,19 @@
     background-color: variables.$noirPoudre;
     color: variables.$lavandrepetant;
     font-weight: bold;
+    border: 1px solid rgba(0,0,0,0);
+    a {
+        color: variables.$lavandrepetant;
+        text-decoration: none;
+    }
     &:hover {
         background-color: variables.$lavandrepetant;
         color: variables.$noirPoudre;
         border: 1px solid variables.$noirPoudre;
+        a {
+            color: variables.$noirPoudre;
+            text-decoration: none;
+        }
     }
 }
 
@@ -155,9 +217,18 @@
     background-color: variables.$blancSel;
     color: variables.$bleuSarcelle;
     font-weight: bold;
+    border: 1px solid rgba(0,0,0,0);
+    a {
+        color: variables.$bleuSarcelle;
+        text-decoration: none;
+    }
     &:hover {
         background-color: variables.$bleuSarcelle;
         color: variables.$blancSel;
         border: 1px solid variables.$blancSel;
+        a {
+            color: variables.$blancSel;
+            text-decoration: none;
+        }
     }
 }
